--- a/introduction/zh_CN.po
+++ b/introduction/zh_CN.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ubuntu-desktop-course introduction\n"
 "Report-Msgid-Bugs-To: sbyy <sbyy@googlegroups.com>\n"
 "POT-Creation-Date: 2009-08-06 12:43+0200\n"
-"PO-Revision-Date: 2009-12-24 17:48+0800\n"
+"PO-Revision-Date: 2009-12-24 17:58+0800\n"
 "Last-Translator: Hunt Xu <huntxu@live.cn>\n"
 "Language-Team: Chinese (simplified) <sbyy@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -860,7 +860,8 @@ msgstr "重申该主题和学生的工作之间存在的联系"
 #: introduction/xinclude.xml:0(None)
 msgid "translator-credits"
 msgstr ""
-"Hunt Xu <huntxu@live.cn>, 2009."
+"Hunt Xu <huntxu@live.cn>, 2009.\n"
+"\n"
 "Launchpad Contributions:\n"
 "  Azrael Green https://launchpad.net/~azrael-green\n"
 "  Jimhu https://launchpad.net/~huyiwei\n"
