update obsolete book/desktop-course-book.pot to make translation can work.

--- a/book/desktop-course-book.pot
+++ b/book/desktop-course-book.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2009-12-07 15:34-0500\n"
+"POT-Creation-Date: 2009-12-25 02:49+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: book/xinclude.xml:4(title)
-msgid "Ubuntu Desktop Training new"
+msgid "Ubuntu Desktop Training"
 msgstr ""
 
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2
