--- a/book/zh_CN.po
+++ b/book/zh_CN.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2009-12-07 15:34-0500\n"
+"POT-Creation-Date: 2009-12-25 02:49+0800\n"
 "PO-Revision-Date: 2009-12-23 20:27+0800\n"
 "Last-Translator: syq <wzssyqa@gmail.com>\n"
 "Language-Team: Chinese (simplified)\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: book/xinclude.xml:4(title)
-msgid "Ubuntu Desktop Training new"
+msgid "Ubuntu Desktop Training"
 msgstr ""
 
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2
