--- a/book/zh_CN.po
+++ b/book/zh_CN.po
@@ -1,19 +1,27 @@
+# Simplified Chinese translation for ubuntu-desktop-course
+# This file is distributed under the same license as the ubuntu-desktop-course package.
+# Copyright (C) 2009 Canonical Ltd and translation contributors:
+#     Hunt Xu <huntxu@live.cn>, 2009.
+#
+
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2009-12-25 02:49+0800\n"
-"PO-Revision-Date: 2009-12-23 20:27+0800\n"
-"Last-Translator: syq <wzssyqa@gmail.com>\n"
-"Language-Team: Chinese (simplified)\n"
+"Project-Id-Version: ubuntu-desktop-course\n"
+"Report-Msgid-Bugs-To: sbyy <sbyy@googlegroups.com>\n"
+"POT-Creation-Date: 2009-08-06 12:43+0200\n"
+"PO-Revision-Date: 2009-12-25 04:20+0800\n"
+"Last-Translator: Hunt Xu <huntxu@live.cn>\n"
+"Language-Team: Chinese (simplified) <sbyy@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: book/xinclude.xml:4(title)
 msgid "Ubuntu Desktop Training"
-msgstr ""
+msgstr "Ubuntu 桌面训练"
 
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2
 #: book/xinclude.xml:0(None)
 msgid "translator-credits"
 msgstr ""
+"Hunt Xu <huntxu@live.cn>, 2009."
