--- a/book/zh_CN.po
+++ b/book/zh_CN.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ubuntu-desktop-course\n"
 "Report-Msgid-Bugs-To: sbyy <sbyy@googlegroups.com>\n"
 "POT-Creation-Date: 2009-08-06 12:43+0200\n"
-"PO-Revision-Date: 2009-12-25 04:20+0800\n"
+"PO-Revision-Date: 2009-12-25 14:50+0800\n"
 "Last-Translator: Hunt Xu <huntxu@live.cn>\n"
 "Language-Team: Chinese (simplified) <sbyy@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #: book/xinclude.xml:4(title)
 msgid "Ubuntu Desktop Training"
-msgstr "Ubuntu 桌面训练"
+msgstr "Ubuntu 桌面培训"
 
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2
 #: book/xinclude.xml:0(None)
