--- a/introduction/zh_CN.po
+++ b/introduction/zh_CN.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ubuntu-desktop-course introduction\n"
 "Report-Msgid-Bugs-To: sbyy <sbyy@googlegroups.com>\n"
 "POT-Creation-Date: 2009-08-06 12:43+0200\n"
-"PO-Revision-Date: 2009-12-25 04:43+0800\n"
+"PO-Revision-Date: 2009-12-30 13:15+0800\n"
 "Last-Translator: Hunt Xu <huntxu@live.cn>\n"
 "Language-Team: Chinese (simplified) <sbyy@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -426,7 +426,7 @@ msgid ""
 "Adding and removing applications using Add/Remove and Synaptic Package "
 "Manager"
 msgstr ""
-"使用 添加/删除 和新立得软件包管理器来添加或删除应用程序"
+"使用 Ubuntu 软件中心和新立得软件包管理器来添加或删除应用程序"
 
 #: introduction/xinclude.xml:639(para)
 msgid "Installing a Single Package File"
