introduction & chapter 5: 修正 translator-credit

--- a/introduction/zh_CN.po
+++ b/introduction/zh_CN.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ubuntu-desktop-course introduction\n"
 "Report-Msgid-Bugs-To: sbyy <sbyy@googlegroups.com>\n"
 "POT-Creation-Date: 2009-08-06 12:43+0200\n"
-"PO-Revision-Date: 2010-01-03 19:57+0800\n"
+"PO-Revision-Date: 2010-01-04 23:12+0800\n"
 "Last-Translator: Hunt Xu <huntxu@live.cn>\n"
 "Language-Team: Chinese (simplified) <sbyy@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -848,7 +848,7 @@ msgstr "重申该主题和学生的工作之间存在的联系"
 #: introduction/xinclude.xml:0(None)
 msgid "translator-credits"
 msgstr ""
-"Hunt Xu <huntxu@live.cn>, 2009.\n"
+"Hunt Xu <huntxu@live.cn>, 2010\n"
 "\n"
 "Launchpad Contributions:\n"
 "  Azrael Green https://launchpad.net/~azrael-green\n"
