Change year of copyright

--- a/book/zh_CN.po
+++ b/book/zh_CN.po
@@ -38,7 +38,7 @@ msgstr ""
 "Aron Xu <happyaron.xu@gmail.com>, 2010\n"
 "Eleanor Chen <chenyueg@gmail.com>, 2010\n"
 "YunQiang Su <wzssyqa@gmail.com>, 2010\n"
-"Yvonne <feidaozhanchen@gmail.com>, 2010\n"
+"Yvonne Ye <feidaozhanchen@gmail.com>, 2010\n"
 "Nihui <shuizhuyuanluo@126.com>, 2010\n"
 "Carlos Gong <bfsugxy@gmail.com>, 2010\n"
 "HuntXu <mhuntxu@gmail.com>, 2010\n"
