--- a/introduction/zh_CN.po
+++ b/introduction/zh_CN.po
@@ -1,7 +1,7 @@
 # Simplified Chinese translation for ubuntu-desktop-course introduction
 # This file is distributed under the same license as the ubuntu-desktop-course package.
-# Copyright (C) 2009 Canonical Ltd and translation contributors:
-#     Hunt Xu <huntxu@live.cn>, 2009.
+# Copyright (C) 2010 Canonical Ltd and translation contributors:
+#     Hunt Xu <huntxu@live.cn>, 2010
 #
 
 msgid ""
