--- a/book/zh_CN.po
+++ b/book/zh_CN.po
@@ -1,4 +1,4 @@
-# Simplified Chinese translation for ubuntu-desktop-course
+# Simplified Chinese translation for ubuntu-desktop-course book
 # This file is distributed under the same license as the ubuntu-desktop-course package.
 # Copyright (C) 2010 Canonical Ltd and translation contributors:
 #   Translation Group 1: 
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: ubuntu-desktop-course book\n"
 "Report-Msgid-Bugs-To: sbyy <sbyy@googlegroups.com>\n"
 "POT-Creation-Date: 2009-08-06 12:43+0200\n"
-"PO-Revision-Date: 2010-01-04 22:52+0800\n"
+"PO-Revision-Date: 2010-01-06 04:15+0800\n"
 "Last-Translator: Aron Xu <happyaron.xu@gmail.com>\n"
 "Language-Team: Chinese (simplified) <sbyy@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
