--- a/legal/zh_CN.po
+++ b/legal/zh_CN.po
@@ -17,7 +17,7 @@ msgstr ""
 
 #: legal/xinclude.xml:4(para)
 msgid "Written by and attributed to Canonical Ltd. and the Ubuntu Training community 2008-2009."
-msgstr "撰写并且归因于 Canonical 有限公司和 Ubuntu 培训社区 2008-2010。"
+msgstr "本课程由 Canonical 有限公司和 Ubuntu 培训社区创作 2008-2010。"
 
 #: legal/xinclude.xml:6(para)
 msgid "This license is bound by the Creative Commons: CC by NC SA"
@@ -41,7 +41,7 @@ msgstr "惟须遵守下列条件："
 
 #: legal/xinclude.xml:21(para)
 msgid "Attribution. You must attribute the work in the manner specified by the author or licensor (but not in any way that suggests that they endorse you or your use of the work)."
-msgstr "署名。您必须按照作者或者许可人指定的方式对作品进行署名(但是不得以任何方式暗示它们支持您或者您做品的使用)。"
+msgstr "署名。您必须按照作者或者许可人指定的方式对作品进行署名(但是不得以任何方式暗示它们支持您或者您作品的使用)。"
 
 #: legal/xinclude.xml:27(para)
 msgid "Non-commercial. You may not use this work for commercial purposes."
