Final update of translation files.

--- a/book/zh_CN.po
+++ b/book/zh_CN.po
@@ -2,18 +2,18 @@
 # This file is distributed under the same license as the ubuntu-desktop-course package.
 # Copyright (C) 2010 Canonical Ltd and translation contributors:
 #   Translation Group 1: 
-#     Aron Xu <happyaron.xu@gmail.com>, 2010
-#     Eleanor Chen <chenyueg@gmail.com>, 2010
+#     Aron Xu <happyaron.xu@gmail.com>, 2010.
+#     Eleanor Chen <chenyueg@gmail.com>, 2010.
 #   Translation Group 2: 
-#     YunQiang Su <wzssyqa@gmail.com>, 2010
-#     Yvonne Ye <feidaozhanchen@gmail.com>, 2010
+#     YunQiang Su <wzssyqa@gmail.com>, 2010.
+#     Yvonne Ye <feidaozhanchen@gmail.com>, 2010.
 #   Translation Group 3: 
-#     Nihui <shuizhuyuanluo@126.com>, 2010
-#     Carlos Gong <bfsugxy@gmail.com>, 2010
+#     Nihui <shuizhuyuanluo@126.com>, 2010.
+#     Carlos Gong <bfsugxy@gmail.com>, 2010.
 #   Review:
-#     HuntXu <mhuntxu@gmail.com>, 2010
+#     Hunt Xu <mhuntxu@gmail.com>, 2010.
 #   Graphics:
-#     JimHu <jimhuyiwei@gmail.com>, 2010
+#     JimHu <jimhuyiwei@gmail.com>, 2010.
 #
 msgid ""
 msgstr ""
@@ -41,5 +41,5 @@ msgstr ""
 "Yvonne Ye <feidaozhanchen@gmail.com>, 2010\n"
 "Nihui <shuizhuyuanluo@126.com>, 2010\n"
 "Carlos Gong <bfsugxy@gmail.com>, 2010\n"
-"HuntXu <mhuntxu@gmail.com>, 2010\n"
+"Hunt Xu <mhuntxu@gmail.com>, 2010\n"
 "JimHu <jimhuyiwei@gmail.com>, 2010"
