--- a/legal/zh_CN.po
+++ b/legal/zh_CN.po
@@ -62,6 +62,5 @@ msgstr "关于这个著作权协议的更多信息，请参阅：http://creative
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2
 #: legal/xinclude.xml:0(None)
 msgid "translator-credits"
-msgstr 
-"JimHu <jimhuyiwei@gmail.com>, 2010"
+msgstr "JimHu <jimhuyiwei@gmail.com>, 2010"
 
