--- a/introduction/zh_CN.po
+++ b/introduction/zh_CN.po
@@ -1,7 +1,7 @@
 # Simplified Chinese translation for ubuntu-desktop-course introduction
 # This file is distributed under the same license as the ubuntu-desktop-course package.
 # Copyright (C) 2010 Canonical Ltd and translation contributors:
-#     Hunt Xu <huntxu@live.cn>, 2010
+#     Hunt Xu <mhuntxu@gmail.com>, 2010.
 #
 
 msgid ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: sbyy <sbyy@googlegroups.com>\n"
 "POT-Creation-Date: 2009-08-06 12:43+0200\n"
 "PO-Revision-Date: 2010-01-07 14:33+0800\n"
-"Last-Translator: Hunt Xu <huntxu@live.cn>\n"
+"Last-Translator: Hunt Xu <mhuntxu@gmail.com>\n"
 "Language-Team: Chinese (simplified) <sbyy@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -847,7 +847,7 @@ msgstr "重申该主题与学生实际工作之间的相关性。"
 #: introduction/xinclude.xml:0(None)
 msgid "translator-credits"
 msgstr ""
-"Hunt Xu <huntxu@live.cn>, 2010\n"
+"Hunt Xu <mhuntxu@gmail.com>, 2010\n"
 "\n"
 "Launchpad Contributions:\n"
 "  Azrael Green https://launchpad.net/~azrael-green\n"
