--- a/introduction/zh_CN.po
+++ b/introduction/zh_CN.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ubuntu-desktop-course introduction\n"
 "Report-Msgid-Bugs-To: sbyy <sbyy@googlegroups.com>\n"
 "POT-Creation-Date: 2010-05-22 16:21+0800\n"
-"PO-Revision-Date: 2010-01-07 14:33+0800\n"
+"PO-Revision-Date: 2010-05-22 18:58+0800\n"
 "Last-Translator: Hunt Xu <mhuntxu@gmail.com>\n"
 "Language-Team: Chinese (simplified) <sbyy@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -107,7 +107,7 @@ msgid ""
 msgstr ""
 "本课程为家庭用户和办公室用户提供 Ubuntu 操作系统的培训。目标对象不必预先了解 "
 "Ubuntu，但必须具备基本的计算机使用能力。要开始学习本课程，请先在您的计算机硬"
-"盘上安装 Ubuntu 9.10。"
+"盘上安装 Ubuntu 10.04 LTS。"
 
 #: introduction/xinclude.xml:67(para)
 msgid ""
